--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -572,6 +572,8 @@ jobs:
             ${{ runner.os }}-${{ matrix.python-version }}-pip-${{ env.PIP_CACHE_VERSION }}-
       - name: Create full Python ${{ matrix.python-version }} virtual environment
         if: steps.cache-venv.outputs.cache-hit != 'true'
+        # setuptools is pinned because guppy3 triggers the following issue:
+        # https://github.com/pypa/setuptools/issues/2936
         run: |
           # Temporary addition of cmake, needed to build some Python 3.9 packages
           apt-get update
@@ -579,7 +581,7 @@ jobs:
 
           python -m venv venv
           . venv/bin/activate
-          pip install --cache-dir=$PIP_CACHE -U "pip<20.3" setuptools wheel
+          pip install --cache-dir=$PIP_CACHE -U "pip<20.3" "setuptools<59.7.0" wheel
           pip install --cache-dir=$PIP_CACHE -r requirements_all.txt
           pip install --cache-dir=$PIP_CACHE -r requirements_test.txt
           pip install -e .
